# learning-machine

./: .buildinfo  .gitignore  CHAPTERS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README-cn.md  README.md  book.toml  genindex.html  intro.html  objects.inv  package-lock.json  package.json  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build.yaml  cleanup.yaml  clear-output.yaml  format-python.yaml  gh-pages.yaml  github-pages-en.yaml  github-pages-zh.yaml  github-pages.yaml  notebook.yaml
_sources/better/: better.ipynb
_sources/reinforce/: reinforce.ipynb
_sources/reuse/: reuse.ipynb
_sources/unsupervised/: unsupervised.ipynb
assets/code/: cat_dog.py  cat_dog_rabbit.py  ce_loss.py  formal_loss.py  hello_world.py  is_apple.py  linear_model.py  mae_loss.py  ml_finance.py  ml_model.py  mse_loss.py  optimize_function.py  practice_loss.py  star_temp.py  what_is_good.py  x_square_sgd.py
basics/: basics.html
basics/approx/: approx.html
basics/data/: data.html
basics/gradients/: back-prop.html  gradients.html  loss-fn-derivative.html
basics/loss/: loss.html
basics/model/: model.html
better/: better.html
better/compression/: compression.html
better/explainable/: explainable.html  saliency.html
better/lll/: lll.html
better/meta/: meta.html
book/: _config.yml  _toc.yml  intro.ipynb  intro.md  markdown.md  notebooks.ipynb  references.bib
book/basic/: basic.md  differentiable.md  gradients.md
book/basics/: basic.ipynb  basics.ipynb
book/better/: better.ipynb
book/generative/: generative.ipynb  (+1 more)
docs/: index.html
en/: README.md  book.toml
generative/: generative.html
layers/: layers.html
notice/: notice.html
reinforce/: reinforce.html
reuse/: reuse.html
src/: SUMMARY.md
tasks/: tasks.html
unsupervised/: unsupervised.html
zh/: CONTRIBUTING.md  README.md  book.toml
(+238 files in other folders)
