[tool.poetry]
name = "learning-machine"
version = "0.0.5"
description = "Machine learning based on answers."
authors = ["RenChu Wang <patrick1031wang@gmail.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.3"
matplotlib = "^3.9.2"
numpy = "<2"
scipy = "^1.14.1"
torch = "^2.5.1"

[tool.poetry.group.dev.dependencies]
autoflake = ">=2"
black = ">=24"
isort = ">=5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
